Fix version attribute in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = simple_rtree
 author = Anton Zhyltsou
 author_email = anton.zhyltsou@gmail.com
-version = attr: simple_rtree.VERSION
+version = attr: simple_rtree.__version__
 description = Lightweight and pythonic implementation of R-Tree based on Shapely geoms.
 long_description = file: README.md
 license = MIT License
